--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <nav id="mainNav">
         <div class="nav-content">
-            <a onclick="openSection(event, 'about')">About</a>
-            <a onclick="openSection(event, 'resume')">Resume</a>
-            <a onclick="openSection(event, 'projects')">Projects</a>
-            <a onclick="openSection(event, 'contact')">Contact</a>
+            <a href="#about" onclick="openSection(event, 'about')">About</a>
+            <a href="#resume" onclick="openSection(event, 'resume')">Resume</a>
+            <a href="#projects" onclick="openSection(event, 'projects')">Projects</a>
+            <a href="#contact" onclick="openSection(event, 'contact')">Contact</a>
         </div>
     </nav>
 
