--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/theme.css">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
 </head>
-<body class="subpage">
+<body class="subpage section-open">
     <div class="hero compact">
         <div class="hero-content">
             <a href="../index.html" class="logo">
@@ -93,6 +94,10 @@
     </div>
 
     <nav class="fixed-bottom">
+        <button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode" aria-pressed="false" title="Toggle dark mode">
+            <svg class="icon-moon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg>
+            <svg class="icon-sun" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
+        </button>
         <div class="nav-content">
             <a href="../about/index.html" class="active">About</a>
             <a href="../resume/index.html">Resume</a>
@@ -100,6 +105,7 @@
             <a href="../contact/index.html">Contact</a>
         </div>
     </nav>
+
 
     <div class="site-social">
         <a href="https://www.linkedin.com/in/vahagb/" target="_blank" rel="noopener" title="LinkedIn">
@@ -109,5 +115,22 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0C5.374 0 0 5.373 0 12c0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23A11.509 11.509 0 0112 5.803c1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576C20.566 21.797 24 17.3 24 12c0-6.627-5.373-12-12-12z"/></svg>
         </a>
     </div>
+
+    <script>
+        // Measure header/footer for scroll containment
+        requestAnimationFrame(function() {
+            var hero = document.querySelector('.hero');
+            var nav = document.querySelector('nav');
+            document.documentElement.style.setProperty('--header-h', hero.getBoundingClientRect().height + 'px');
+            document.documentElement.style.setProperty('--footer-h', nav.getBoundingClientRect().height + 'px');
+        });
+        window.addEventListener('resize', function() {
+            var hero = document.querySelector('.hero');
+            var nav = document.querySelector('nav');
+            document.documentElement.style.setProperty('--header-h', hero.getBoundingClientRect().height + 'px');
+            document.documentElement.style.setProperty('--footer-h', nav.getBoundingClientRect().height + 'px');
+        });
+    </script>
+    <script src="../js/theme.js"></script>
 </body>
 </html>
