ugh this is ugly but wip

--- a/projects/index.html
+++ b/projects/index.html
@@ -109,6 +109,7 @@
         });
     </script>
     <script src="../js/theme.js"></script>
+    <script src="../js/modal-content.js"></script>
     <script src="../js/modal.js"></script>
 </body>
 </html>
