--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
     </div>
 
     <script src="js/theme.js"></script>
+    <script src="js/modal-content.js"></script>
     <script src="js/modal.js"></script>
 </body>
 </html>
